[package]
name = "distribution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
library = []
mt = ["library", "cw-multi-test", "anyhow"]


[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.1.0"
thiserror = "1.0.50"
common = { version = "0.1.0", path = "../../common" }
cw-multi-test = {version = "0.17.0", optional = true}
anyhow = {version = "1.0.75", optional = true}

[dev-dependencies]
cw-multi-test = "0.17.0"
anyhow = "1.0.75"
